force-app/main/default/objects/Notification__c/Notification__c.object-meta.xml
<CustomObject>
    <description>Candidate notification records for the Blakeney.ai notification center.</description>
    <label>Notification</label>
    <nameField>
        <displayFormat>NOT-{000000}</displayFormat>
        <label>Notification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>