force-app/main/default/objects/Notification__c/fields/Link_To__c.field-meta.xml
<CustomField>
    <fullName>Link_To__c</fullName>
    <label>Link To</label>
    <type>Url</type>
</CustomField>