force-app/main/default/objects/Notification__c/fields/Recipient_Account__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employer account that receives the notification.</description>
    <label>Recipient Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Notifications</relationshipLabel>
    <relationshipName>Account_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>